--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,20 @@
 }
 
 body {
-  background: #eeeab5;
+  background-image: url(' https://images6.alphacoders.com/429/429155.jpg');
+  background-repeat: no-repeat;
 }
-
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40 px;
+}
 ul {
   display: flex;
+
   align-items: stretch; /* Default */
   justify-content: space-between;
   width: 95%;
-  background: #2f5c3e;
+  background: #5c0851;
   margin-right: 140 px;
   padding-left: 50px;
   padding-right: 50px;
@@ -19,51 +24,37 @@ ul {
     sans-serif;
   text-decoration: none;
   font-size: 20px;
+  margin-bottom: 80px;
 }
-
 li {
   display: block;
   flex: 0 1 auto;
   list-style-type: none;
-  background: #fff241;
+  background: #5c0851;
   padding: 20px;
 }
-
 h1 {
   font-style: italic;
   font-family: 'Times New Roman', Times, serif;
-  color: brown;
+  color: rgb(15, 125, 153);
 }
-
 .form {
   text-align: center;
-  border-style: solid;
-  border-color: #2f5c3e;
-  border-width: 10px;
 }
-
 .about {
   text-align: center;
-  border-style: solid;
-  border-color: #2f5c3e;
-  border-width: 10px;
 }
 
 h2 {
   font-size: 20 px;
-  color: brown;
+  color: rgb(15, 125, 153);
 }
-
 h4 {
-  color: #2f5c3e;
+  color: black;
 }
 .home {
   text-align: center;
-  border-style: solid;
-  border-color: #2f5c3e;
-  border-width: 10px;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
